@@ -4,3 +4,4 @@ Some issues in modules/newsetter.js with video attachments
 Commands for setting up monitoring system (add / remove profiles)
 Add more settings for guild admins
 Add ADMIN (bot creator) interaction in PM
+Transfer person params in request body, not in get params, if it is possible
